force-app/main/default/objects/Assessment_outside__c/fields/seizo_nensiki__c.field-meta.xml
<CustomField>
    <fullName>seizo_nensiki__c</fullName>
    <formula>IF( ISBLANK( Assessment__r.seizo_nensiki__c ) , &quot;&quot; , Assessment__r.seizo_nensiki__c &amp; &quot;年&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車両製造年</label>
    <type>Text</type>
</CustomField>