force-app/main/default/objects/Assessment_outside__c/fields/shadai_no__c.field-meta.xml
<CustomField>
    <fullName>shadai_no__c</fullName>
    <formula>Assessment__r.shadai_no__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車台番号</label>
    <type>Text</type>
</CustomField>