force-app/main/default/objects/Assessment_outside__c/fields/shaken_date_2__c.field-meta.xml
<CustomField>
    <fullName>shaken_date_2__c</fullName>
    <formula>Assessment__r.shaken_date_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車検日2</label>
    <type>Date</type>
</CustomField>