force-app/main/default/objects/Assessment_outside__c/fields/shaken_getu__c.field-meta.xml
<CustomField>
    <fullName>shaken_getu__c</fullName>
    <formula>IF( ISBLANK( Assessment__r.shaken_getu__c ) , &quot;&quot; , Assessment__r.shaken_getu__c &amp; &quot;月&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車検付き月</label>
    <type>Text</type>
</CustomField>