force-app/main/default/objects/Assessment_outside__c/fields/shaken_inf__c.field-meta.xml
<CustomField>
    <fullName>shaken_inf__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.shaken_inf__c ) , &quot;0&quot;, &quot;抹消&quot; , &quot;1&quot;, &quot;車検付き&quot; , &quot;2&quot;, &quot;確認中&quot; , &quot;3&quot;, &quot;書類なし&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車検情報</label>
    <type>Text</type>
</CustomField>