force-app/main/default/objects/Assessment_outside__c/fields/shaken_nen__c.field-meta.xml
<CustomField>
    <fullName>shaken_nen__c</fullName>
    <formula>IF( ISBLANK( Assessment__r.shaken_nen__c ) , &quot;&quot; , Assessment__r.shaken_nen__c &amp; &quot;年&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車検付き年</label>
    <type>Text</type>
</CustomField>