force-app/main/default/objects/Assessment_outside__c/fields/shaken_run_dist_2__c.field-meta.xml
<CustomField>
    <fullName>shaken_run_dist_2__c</fullName>
    <formula>Assessment__r.shaken_run_dist_2__c</formula>
    <label>車検証の走行距離2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>