force-app/main/default/objects/Assessment_outside__c/fields/shakensho_image__c.field-meta.xml
<CustomField>
    <fullName>shakensho_image__c</fullName>
    <formula>IMAGE( Assessment__r.shakensho_url__c , &quot;車検証&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車検証画像</label>
    <type>Text</type>
</CustomField>