force-app/main/default/objects/Assessment_outside__c/fields/shanai_tumikomi_parts__c.field-meta.xml
<CustomField>
    <fullName>shanai_tumikomi_parts__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.shanai_tumikomi_parts__c ) , &quot;0&quot;, &quot;無&quot; , &quot;1&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車内積込パーツ</label>
    <type>Text</type>
</CustomField>