force-app/main/default/objects/Assessment_outside__c/fields/shift__c.field-meta.xml
<CustomField>
    <fullName>shift__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.shift__c ) , &quot;1&quot;, &quot;AT&quot; , &quot;2&quot;, &quot;4MT&quot; , &quot;3&quot; , &quot;5MT&quot; , &quot;4&quot; , &quot;6MT&quot; , &quot;5&quot; , &quot;7MT&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>シフト</label>
    <type>Text</type>
</CustomField>