force-app/main/default/objects/Assessment_outside__c/fields/sobi_pawer_slide_door_right__c.field-meta.xml
<CustomField>
    <fullName>sobi_pawer_slide_door_right__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.sobi_pawer_slide_door_right__c ) , &quot;0&quot;, &quot;無&quot; , &quot;1&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>パワースライドドア右</label>
    <type>Text</type>
</CustomField>