force-app/main/default/objects/Assessment_outside__c/fields/sobi_seat__c.field-meta.xml
<CustomField>
    <fullName>sobi_seat__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.sobi_seat__c ) , &quot;0&quot;, &quot;未選択&quot; , &quot;1&quot;, &quot;レザー&quot; , &quot;2&quot;, &quot;ハーフレザー&quot; , &quot;3&quot;, &quot;アルカンターラ&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>シート</label>
    <type>Text</type>
</CustomField>