force-app/main/default/objects/Assessment_outside__c/fields/tanto_manage_bumon__c.field-meta.xml
<CustomField>
    <fullName>tanto_manage_bumon__c</fullName>
    <formula>Assessment__r.tanto_manage_bumon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>統括部門</label>
    <type>Text</type>
</CustomField>