force-app/main/default/objects/Assessment_outside__c/fields/teiin__c.field-meta.xml
<CustomField>
    <fullName>teiin__c</fullName>
    <formula>Assessment__r.teiin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>定員</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>