force-app/main/default/objects/Assessment_outside__c/fields/tokki_check_rump__c.field-meta.xml
<CustomField>
    <fullName>tokki_check_rump__c</fullName>
    <formula>IF ( INCLUDES(Assessment__r.tokki_check_rump__c,&quot;29&quot; ) , &quot;エアバックチェックランプ点灯,&quot;, &quot;&quot;)
&amp; IF ( INCLUDES(Assessment__r.tokki_check_rump__c,&quot;30&quot; ) , &quot;エンジンチェックランプ点灯,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_check_rump__c,&quot;31&quot; ) , &quot;ABSチェックランプ点灯,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_check_rump__c,&quot;32&quot; ) , &quot;チェックランプ点灯,&quot;,&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>特記事項（チェックランプ）</label>
    <type>Text</type>
</CustomField>