force-app/main/default/objects/Assessment_outside__c/fields/tokki_keppin__c.field-meta.xml
<CustomField>
    <fullName>tokki_keppin__c</fullName>
    <formula>IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;52&quot; ) , &quot;カギなし,&quot;, &quot;&quot;)
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;53&quot; ) , &quot;キー抜けない,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;54&quot; ) , &quot;メカニカルキー欠,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;55&quot; ) , &quot;キー破損あり,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;56&quot; ) , &quot;パーツ欠品,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;57&quot; ) , &quot;シフトノブ欠,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;58&quot; ) , &quot;ヘッドレスト欠,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;59&quot; ) , &quot;コーションプレート欠,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;60&quot; ) , &quot;バッテリー欠,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;78&quot; ) , &quot;バッテリーあがり,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;107&quot; ) , &quot;SDカードなし,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_keppin__c,&quot;112&quot; ) , &quot;充電ケーブルなし,&quot;,&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>特記事項（欠品／備品不具合）</label>
    <type>Text</type>
</CustomField>