force-app/main/default/objects/Assessment_outside__c/fields/tokki_oil__c.field-meta.xml
<CustomField>
    <fullName>tokki_oil__c</fullName>
    <formula>IF ( INCLUDES(Assessment__r.tokki_oil__c,&quot;33&quot; ) , &quot;エンジンオイルパン割れ,&quot;, &quot;&quot;)
&amp; IF ( INCLUDES(Assessment__r.tokki_oil__c,&quot;34&quot; ) , &quot;エンジンオイル漏れ,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_oil__c,&quot;35&quot; ) , &quot;ミッションオイル漏れ,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_oil__c,&quot;36&quot; ) , &quot;ミッションオイルパン割れ,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_oil__c,&quot;37&quot; ) , &quot;オイル乳化あり,&quot;,&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>特記事項（オイル）</label>
    <type>Text</type>
</CustomField>