force-app/main/default/objects/Assessment_outside__c/fields/tokki_torihazusi__c.field-meta.xml
<CustomField>
    <fullName>tokki_torihazusi__c</fullName>
    <formula>IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;45&quot; ) , &quot;ETC取り外し,&quot;, &quot;&quot;)
&amp; IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;46&quot; ) , &quot;ナビ取り外し,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;47&quot; ) , &quot;AW取り外し（純正AWに交換）,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;48&quot; ) , &quot;AW取り外し（スペアへ交換）,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;49&quot; ) , &quot;AW取り外し（社外AWへ交換）,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;50&quot; ) , &quot;AW取り外し（スチールへ交換）,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;51&quot; ) , &quot;タイヤ・ホイール4本欠,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;77&quot; ) , &quot;フリップダウンモニター取り外し,&quot;,&quot;&quot; )
&amp; IF ( INCLUDES(Assessment__r.tokki_torihazusi__c,&quot;111&quot; ) , &quot;オーディオ取り外し,&quot;,&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>特記事項（取り外し）</label>
    <type>Text</type>
</CustomField>