force-app/main/default/objects/Assessment_outside__c/fields/turbo__c.field-meta.xml
<CustomField>
    <fullName>turbo__c</fullName>
    <formula>CASE ( TEXT ( Assessment__r.turbo__c ) , &quot;0&quot;, &quot;未選択&quot; , &quot;1&quot;, &quot;無&quot; , &quot;2&quot;, &quot;有&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ターボ</label>
    <type>Text</type>
</CustomField>