force-app/main/default/objects/Assessment_outside__c/fields/UsedcarEvaluationpoints__c.field-meta.xml
<CustomField>
    <fullName>UsedcarEvaluationpoints__c</fullName>
    <description>長谷川</description>
    <formula>TEXT(Assessment__r.UsedcarEvaluationpoints__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>中古車査定時評価点</label>
    <type>Text</type>
</CustomField>