force-app/main/default/objects/Assessment_outside__c/fields/UsedcarInnerEvaluationpoints__c.field-meta.xml
<CustomField>
    <fullName>UsedcarInnerEvaluationpoints__c</fullName>
    <description>長谷川</description>
    <formula>TEXT(Assessment__r.UsedcarInnerEvaluationpoints__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>中古車査定時内装評価点</label>
    <type>Text</type>
</CustomField>