force-app/main/default/objects/Assessment_outside__c/listViews/bit_already.listView-meta.xml
<ListView>
    <fullName>bit_already</fullName>
    <columns>NAME</columns>
    <columns>Owner_copy__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Bid_limit__c</columns>
    <columns>registerdAtYear__c</columns>
    <columns>car_model__c</columns>
    <columns>shadai_no__c</columns>
    <columns>Bid_amount__c</columns>
    <columns>bit_ranking__c</columns>
    <columns>bit_category__c</columns>
    <columns>Purchase_condition__c</columns>
    <columns>Remarks__c</columns>
    <columns>Assessment_outside_memo__c</columns>
    <columns>Assessment_outside_memo_result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bid_amount__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>003.入札済み</label>
</ListView>