force-app/main/default/objects/Assessment_outside__c/listViews/bit_notyet_expired.listView-meta.xml
<ListView>
    <fullName>bit_notyet_expired</fullName>
    <columns>NAME</columns>
    <columns>Owner_copy__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Bid_limit__c</columns>
    <columns>registerdAtYear__c</columns>
    <columns>car_model__c</columns>
    <columns>shadai_no__c</columns>
    <columns>Bid_amount__c</columns>
    <columns>Purchase_condition__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bid_amount__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Bid_limit__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>002.入札まだ（期限切れ）</label>
</ListView>