force-app/main/default/objects/Assessment_outside__c/listViews/X007.listView-meta.xml
<ListView>
    <fullName>X007</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Bid_limit__c</columns>
    <columns>registerdAtYear__c</columns>
    <columns>car_model__c</columns>
    <columns>Bid_amount__c</columns>
    <columns>Purchase_condition__c</columns>
    <columns>bit_ranking__c</columns>
    <columns>No1bit__c</columns>
    <columns>No2bit__c</columns>
    <columns>No3bit__c</columns>
    <columns>No4bit__c</columns>
    <columns>No5bit__c</columns>
    <columns>Pickup_request_date__c</columns>
    <columns>DocumentOK_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bit_ranking__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>bit_category__c</field>
        <operation>equals</operation>
        <value>はなまる金額</value>
    </filters>
    <label>007.はなまる金額</label>
</ListView>